<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- Main content of the activity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- Callsign Input -->
        <EditText
            android:id="@+id/callsignInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entercallsign"
            android:inputType="textCapCharacters"
            android:minHeight="48dp"
            android:maxWidth="488dp"
            tools:ignore="Autofill" />

        <!-- FOX 1 Logger Button -->
        <Button
            android:id="@+id/btnFox1Logger"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:maxWidth="320dp"
            android:text="@string/fox1logger"
            android:textColor="@color/btntextblue"
            android:backgroundTint="@color/button"
            android:layout_marginTop="16dp" />

        <!-- FOX 2 Logger Button -->
        <Button
            android:id="@+id/btnFox2Logger"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/fox2logger"
            android:textColor="@color/btntextblue"
            android:backgroundTint="@color/button"
            android:layout_marginTop="16dp" />

        <!-- LOGS Button -->
        <Button
            android:id="@+id/btnLogs"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/logs"
            android:textColor="@color/btntextblue"
            android:backgroundTint="@color/button"
            android:layout_marginTop="16dp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
